--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,19 @@
-Welcome <%= @player_name %>!
+<h3>Welcome <%= @player_name %>!</h3>
+
+Please choose between rock paper or scissors:
+<br>
+<br>
+<br>
+<form action="/choice">
+  <input type="submit" value="Rock">
+</form>
+
+<br><br>
+<form action="/choice">
+  <input type="submit" value="Paper">
+</form>
+
+<br><br>
+<form action="/choice">
+  <input type="submit" value="Scissors">
+</form>
